# Kepler

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: CI-CD.yml
cmake/: DownloadDependecies.cmake  Source.cmake
cmake/Kepler/: CMakeLists.txt
cmake/Kepler_static/: CMakeLists.txt
examples/: CMakeLists.txt
examples/MultithreadHttpServer/: CMakeLists.txt
examples/MultithreadHttpServer/src/: main.cpp
include/HttpClient/: HttpClient.hpp
include/HttpServer/: Advanced.hpp  DefaultMiddlewares.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  Middleware.hpp  Router.hpp  Session.hpp
include/HttpsServer/: Advanced.hpp  HttpsRequest.hpp  HttpsResponse.hpp  HttpsServer.hpp  Middleware.hpp  Router.hpp
include/Kepler/: General.hpp
include/Kepler/HttpClient/: HttpClient.hpp
include/Kepler/HttpServer/: Advanced.hpp  DefaultMiddlewares.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  Middleware.hpp  Router.hpp  Session.hpp
include/Kepler/HttpsClient/: HttpsClient.hpp
include/Kepler/HttpsServer/: Advanced.hpp  HttpsRequest.hpp  HttpsResponse.hpp  HttpsServer.hpp  Middleware.hpp  Router.hpp  Session.hpp
include/Kepler/WebClient/: WebClient.hpp
include/LogClient/: LogClient.hpp
include/Logger/: Logger.hpp
include/fmt/: chrono.h  compile.h  core.h  format.h  std.h
include/sqlite3/: sqlite3.h
src/: main.cpp
src/HttpClient/: HttpClient.cpp
src/HttpServer/: DefaultMiddlewares.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  Middleware.cpp  Router.cpp  Session.cpp
src/HttpsClient/: HttpsClient.cpp
src/WebClient/: WebClient.cpp
test/include/FuzzyTest/: FuzzyTest.hpp
test/include/RPSTest/: Advanced.hpp  RPSTest.hpp  RPS_HttpServer.hpp
test/include/UnitTest/: UnitTest.hpp
test/src/FuzzyTest/: FuzzyTest.cpp
test/src/RPSTest/: RPSTest.cpp
test/src/UnitTest/: UnitTest.cpp
